# AutoMegaKernel

./: .gitattributes  .gitignore  .mcp.json  AGENTS.md  BASELINES.md  CHANGELOG.md  CONTRIBUTING.md  DATACENTER_RESULTS.md  EXPERIMENTS.md  HARDENING.md  HARNESS.md  README.md  SECURITY.md  amk_cli.py  amk_mcp.py  amk_orchestrate.py  autoresearch.py  compile.py  conftest.py  generate.py  harness.py  loop1.py  program.md  proposer.py  pyproject.toml
.claude/agents/: amk-megakernel-optimizer.md
.claude/commands/: amk-autoresearch.md  amk-compile.md  amk-optimize.md
.claude/goals/: optimize-megakernel.md
.claude/skills/megakernel-optimization/: SKILL.md
.claude/workflows/: megakernel-autoresearch.js
.github/: FUNDING.yml
.github/workflows/: ci.yml
docs/: AGENT_HARNESS.md  GEMV_OPTIMIZATION_PLAN.md  IR_SPEC.md
dynamism/: __init__.py
eval/: __init__.py  baselines.py  bench.py  bench_baselines.py  bench_cpasync_gemv.py  bench_fat_tile_gemv.py  bench_quant.py  bench_r2_perf.py  oracle.py  peak_bandwidth.py  perplexity.py  roofline.py
examples/: run_hf_model.py
flywheel/: __init__.py  corpus.jsonl  log.py  prior.py  record_datacenter.py
instructions/: __init__.py  _build.py  gen.py  reference.py  verify_inst.py
instructions/cuda/: add.cu  attention_tile.cu  embed.cu  gemv_tile.cu  rmsnorm.cu  rope.cu  silu_mul.cu
instructions/triton/: __init__.py
models/: __init__.py  toy.py
paper/results/: a100.json  agent_in_the_loop.json  autoresearch_measured.json  coverage.json  cpasync_gemv.json  fat_tile_gemv.json  flywheel_learning.json  full_a100.json  full_h100.json  h100.json  int8_l4_trajectory.json  int8_pos_l4_2.7B.json  int8_scale_a100.json  int8_scale_a10g.json  int8_scale_datacenter.json  int8_scale_h100.json  int8_scale_l4.json  int8_scale_l40s.json  int8_scale_t4.json  int8_search.json  int8_search_datacenter.json  int8_search_multisize.json  int8_vs_cublas.json  int8_vs_cublas_datacenter.json  local_5090.json  overnight_a100.json  overnight_h100.json  perf_pinned_a100.json  perf_pinned_h100.json  pro_a100.json  pro_h100.json  quality.json  quant_decode.json  r2_vm_perf.json  search.json  self_improvement.json  validator_soundness.json  vm_autotune.json  vs_cublas_10min.json
schedule/: __init__.py  cost_model.py  graph.py  ir.py  lower.py  quantize.py  search.py
schemas/: schedule_config.schema.json
tests/: test_abi_sync.py  test_autoresearch.py  test_baselines.py  test_compile.py  test_cuda_autotune.py  test_cuda_bf16.py  test_cuda_decode.py  test_cuda_fp16.py  test_cuda_int4.py  test_cuda_perf.py  test_cuda_vm.py  test_eval.py  test_floor_guard.py  test_fused.py  test_generate.py  test_harness.py  test_hf_checkpoint.py  test_hf_import.py  test_ir_smoke.py  test_lower.py  test_mcp_server.py  test_overnight.py  test_persist_decode.py  test_quantize.py  test_robustness.py  test_search.py  test_validator_races.py
vm/: __init__.py  abi.h  amk_persist.cuh  amk_vm.cuh  autotune.py  loader.py  loader_persist.py  ops.cuh  pages.cu  pages.cuh  reference_vm.py  scheduler.cu  scheduler_persist.cu  sync.cu  sync.cuh  verify_vm.py  vm_ext.cpp  vm_ext_persist.cpp
